--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: hidden;
 }
 
 h1 {
@@ -725,7 +726,7 @@ button[type="submit"]:hover {
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #dfdfdf;
 }
 
 /* Стили для контейнера карточек с событиями */
