last one mb (1)

--- a/frontend/views/chef_profile.html
+++ b/frontend/views/chef_profile.html
@@ -60,7 +60,7 @@
 <body>
 <div id="profileInfo">
   <h1>Профиль шефа</h1>
-  <img id="avatar" src="../../backend/images/povar.png" alt="Avatar" />
+  <img id="avatar" src="../images/povar.png" alt="Avatar" />
   <h2 id="profileName">Имя шефа</h2>
   <p id="bio">Биография: <span></span></p>
   <p id="followersCount">Количество подписчиков: 0</p>
