--- a/frontend/views/user_profile.html
+++ b/frontend/views/user_profile.html
@@ -60,7 +60,7 @@
 <body>
 <div id="profileInfo">
     <h1>Профиль пользователя</h1>
-    <img id="avatar" src="../../backend/images/povar.png" alt="Avatar" />
+    <img id="avatar" src="../images/povar.png" alt="Avatar" />
     <h2 id="profileName">Имя пользователя</h2>
 </div>
 
