--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход в Cooking Masterclass</title>
+    <title>Вход в Route-Master</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<h1>Вход в Cooking Masterclass</h1>
+<h1>Вход в Route-Master</h1>
 
 <form id="loginForm" class="login-form">
     <label for="username">Имя пользователя</label>
@@ -16,7 +16,7 @@
     <label for="password">Пароль</label>
     <input type="password" id="password" name="password" required placeholder="Введите пароль">
 
-    <label for="chef">Я шеф-повар</label>
+    <label for="chef">Я путешественник</label>
     <input type="checkbox" id="chef" name="chef">
 
     <button type="submit">Войти</button>
