--- a/frontend/views/recipes.html
+++ b/frontend/views/recipes.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рецепты</title>
+    <title>Маршруты</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<a href="index.html" class="btn-home">На главную</a>
+<a href="index.html" class="btn-home">Вернуться назад</a>
 
-<h1>Рецепты</h1>
+<h1>Маршруты</h1>
 
 <div id="recipes-container" class="recipe-grid"></div>
-<button id="create-recipe-button" class="create-recipe-button">Создать рецепт</button>
+<button id="create-recipe-button" class="create-recipe-button">Добавить маршрут</button>
 <div id="create-recipe-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Создать новый рецепт</h2>
+        <h2>Заполните форму</h2>
         <form id="create-recipe-form">
-            <label for="new-recipe-title">Название рецепта:</label>
+            <label for="new-recipe-title">Название маршрута:</label>
             <input type="text" id="new-recipe-title" required>
 
-            <label for="new-recipe-ingredients">Ингредиенты (в формате JSON):</label>
+            <label for="new-recipe-ingredients">Список мест ("место": 10):</label>
             <textarea id="new-recipe-ingredients" required></textarea>
 
-            <label for="new-recipe-text">Текст рецепта:</label>
+            <label for="new-recipe-text">Описание маршрута:</label>
             <textarea id="new-recipe-text" required></textarea>
 
-            <button type="submit">Создать рецепт</button>
+            <button type="submit">отправить</button>
         </form>
     </div>
 </div>
@@ -40,25 +40,25 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2 id="recipe-title"></h2>
-        <p><strong>Ингредиенты:</strong></p>
+        <p><strong>Интересные места:</strong></p>
         <ul id="recipe-ingredients"></ul>
         <p id="recipe-text"></p>
 
         <!-- Форма редактирования -->
         <div id="edit-form" style="display: none;">
-            <label for="edit-title">Название рецепта:</label>
+            <label for="edit-title">Название маршрута:</label>
             <input type="text" id="edit-title" />
 
-            <label for="edit-ingredients">Ингредиенты (в формате JSON):</label>
+            <label for="edit-ingredients">Список мест:</label>
             <textarea id="edit-ingredients"></textarea>
 
-            <label for="edit-recipe-text">Текст рецепта:</label>
+            <label for="edit-recipe-text">Описание маршрута:</label>
             <textarea id="edit-recipe-text"></textarea>
 
-            <button id="save-changes">Сохранить изменения</button>
+            <button id="save-changes">Сохранить</button>
         </div>
 
-        <button id="edit-button">Редактировать</button>
+        <button id="edit-button">Изменить</button>
         <button id="delete-button">Удалить</button>
     </div>
 </div>
