--- a/frontend/views/reg.html
+++ b/frontend/views/reg.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<h1>Регистрация на Cooking Masterclass</h1>
+<h1>Регистрация на Route-Master</h1>
 
 <form id="registrationForm" class="registration-form">
   <label for="username">Имя пользователя</label>
@@ -16,7 +16,7 @@
   <label for="password">Пароль</label>
   <input type="password" id="password" name="password" required placeholder="Введите пароль">
 
-  <label for="chef">Я шеф-повар</label>
+  <label for="chef">Я путешественник</label>
   <input type="checkbox" id="chef" name="chef">
 
   <button type="submit">Зарегистрироваться</button>
