--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: #ae5757;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@ h1 {
 
 .auth-buttons a {
     text-decoration: none;
-    background-color: #4CAF50;
+    background-color: #aa3e3e;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
@@ -51,7 +51,7 @@ h1 {
 .card {
     width: 250px;
     height: 400px;
-    background-color: white;
+    background-color: #c9e6c2;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -123,13 +123,13 @@ body {
 .back-to-home {
     text-decoration: none;
     font-size: 18px;
-    color: #007bff;
+    color: #630404;
     position: absolute;
     top: 20px;
     right: 20px;
     padding: 5px 10px;
     border-radius: 5px;
-    background-color: #f4f4f9;
+    background-color: #630404;
 }
 
 .back-to-home:hover {
@@ -203,7 +203,7 @@ h1 {
 }
 
 .registration-form {
-    background-color: white;
+    background-color: #96d18c;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -219,22 +219,22 @@ h1 {
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #a35f5f;
     border-radius: 4px;
 }
 
 .registration-form button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #682626;
+    color: #602222;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
 .registration-form button:hover {
-    background-color: #45a049;
+    background-color: #c16c6c;
 }
 
 .error-message {
@@ -260,7 +260,7 @@ h1 {
 }
 
 .login-form {
-    background-color: white;
+    background-color: #96d18c;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -276,7 +276,7 @@ h1 {
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #872222;
     border-radius: 4px;
 }
 
@@ -317,7 +317,7 @@ h1 {
 
 /* Стиль для кнопки выхода */
 #logoutButton {
-    background-color: #FF5733; /* Яркий цвет для кнопки выхода */
+    background-color: #6c0000; /* Яркий цвет для кнопки выхода */
     color: white;
     padding: 8px 16px;
     border: none;
@@ -328,11 +328,11 @@ h1 {
 }
 
 #logoutButton:hover {
-    background-color: #e74c3c;
+    background-color: #a60000;
 }
 
 #logoutButton:active {
-    background-color: #c0392b;
+    background-color: #a60000;
 }
 
 /* Стиль для блока, где будут кнопки входа и регистрации, если пользователь не авторизован */
@@ -345,7 +345,7 @@ h1 {
 
 .auth-buttons a {
     text-decoration: none;
-    background-color: #4CAF50;
+    background-color: #aa3e3e;
     color: white;
     padding: 10px 20px;
     border-radius: 4px;
@@ -354,7 +354,7 @@ h1 {
 }
 
 .auth-buttons a:hover {
-    background-color: #45a049;
+    background-color: #682626;
 }
 
 
@@ -394,7 +394,7 @@ h1 {
     text-align: center;
     margin-top: 1%;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #630404;
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -402,7 +402,7 @@ h1 {
 }
 
 .btn-home:hover {
-    background-color: #0056b3;
+    background-color: #810101;
 }
 
 /* Стили для контейнера рецептов */
@@ -726,7 +726,7 @@ button[type="submit"]:hover {
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #dfdfdf;
+    background-color: #86b37c;
 }
 
 /* Стили для контейнера карточек с событиями */
@@ -791,11 +791,23 @@ body {
 }
 
 /* Кнопки "На главную" и "Создать событие" */
-.schedule_btn-home,
+.schedule_btn-home {
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #910606;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+}
+
 .schedule_btn {
     padding: 10px 20px;
     margin-top: 10px;
-    background-color: #007bff;
+    background-color: #218838;
     color: white;
     border: none;
     border-radius: 5px;
@@ -807,11 +819,11 @@ body {
 
 
 .schedule_btn-home:hover {
-    background-color: #006adc;
+    background-color: #ae0909;
 }
 
 .schedule_btn:hover {
-    background-color: #218838;
+    background-color: #2ac14b;
 }
 
 /* Модальное окно */
