--- a/frontend/views/chef_profile.html
+++ b/frontend/views/chef_profile.html
@@ -20,10 +20,10 @@
     #profileInfo {
       text-align: center; /* Центрируем текст */
       padding: 20px;
-      border: 1px solid #ccc;
+      border: 1px solid #637743;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      background-color: #f9f9f9;
+      background-color: #9fae87;
     }
 
     /* Стиль для аватара */
